--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ DISCORD_ROLE_ID=1237157417377337455
 DISCORD_TOKEN=
 #ACCESS_BY_DISCORD_ROLES=1237157417377337455,1237157276327084065
 
+GITHUB_ACCESS_TOKEN=
+
 INFLUX_URL=
 INFLUX_TOKEN=
 INFLUX_ORG=
