--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@turf/helpers": "^7.2.0",
     "@turf/intersect": "^7.2.0",
     "@turf/kinks": "^7.2.0",
+    "@turf/line-arc": "^7.2.0",
     "@turf/line-intersect": "^7.2.0",
     "@turf/meta": "^7.2.0",
     "@turf/nearest-point-on-line": "^7.2.0",
