--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "vite-svg-loader": "^5.1.0",
     "vitepress": "^1.6.3",
     "vue": "^3.5.13",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.0",
-    "vuedraggable": "^4.1.0",
     "ws": "^8.18.1"
   },
   "devDependencies": {
