--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.1.2-final",
+  "version": "1.1.2",
   "private": true,
   "type": "module",
   "scripts": {
