--- a/.config/k8s/main/app.yml
+++ b/.config/k8s/main/app.yml
@@ -62,7 +62,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: worker
+        doks.digitalocean.com/node-pool: worker-ctp
       containers:
         - name: worker
           image: ghcr.io/vatsim-radar/vatsim-radar/production
@@ -74,9 +74,6 @@ spec:
             requests:
               cpu: 600m
               memory: 300Mi
-            limits:
-              cpu: 1000m
-              memory: 1Gi
           readinessProbe:
             tcpSocket:
               port: 8880
