--- a/.config/k8s/influx.yml
+++ b/.config/k8s/influx.yml
@@ -26,7 +26,7 @@ spec:
         app: influx-v2
     spec:
       nodeSelector:
-        doks.digitalocean.com/node-pool: influx-ctp
+        doks.digitalocean.com/node-pool: influx-m
       imagePullSecrets:
         - name: ghcr-login-secret
       containers:
@@ -39,6 +39,9 @@ spec:
             requests:
               cpu: 300m
               memory: 600Mi
+            limits:
+              cpu: 1800m
+              memory: 1800Mi
           volumeMounts:
             - name: influx-data-v2
               mountPath: /root/.influxdbv2
