Commit before delete work

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@prisma/client": "^6.6.0",
     "@protomaps/basemaps": "^5.3.0",
     "@sentry/nuxt": "^9.14.0",
+    "@turf/bearing": "^7.2.0",
     "@turf/difference": "^7.2.0",
     "@turf/great-circle": "^7.2.0",
     "@turf/helpers": "^7.2.0",
@@ -39,6 +40,7 @@
     "@turf/kinks": "^7.2.0",
     "@turf/line-arc": "^7.2.0",
     "@turf/line-intersect": "^7.2.0",
+    "@turf/line-to-polygon": "^7.2.0",
     "@turf/meta": "^7.2.0",
     "@turf/nearest-point-on-line": "^7.2.0",
     "@turf/union": "^7.2.0",
