--- a/docker-compose.prebuilt-prod.yml
+++ b/docker-compose.prebuilt-prod.yml
@@ -7,3 +7,6 @@ services:
 
     vatglasses-worker:
         image: ghcr.io/vatsim-radar/vatsim-radar/production-prebuilt:latest
+
+    navigraph:
+        image: ghcr.io/vatsim-radar/vatsim-radar/production-prebuilt:latest
