--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "ol-mapbox-style": "^13.0.1",
     "pinia": "^3.0.2",
     "prisma": "^6.8.2",
+    "rou3": "^0.6.1",
     "sharp": "^0.34.1",
     "sqlite3": "^5.1.7",
+    "srvx": "^0.7.1",
     "svgo": "^3.3.2",
     "ua-parser-js": "2.0.3",
     "vite-plugin-pwa": "^1.0.0",
