--- a/docker-compose.prebuilt.yml
+++ b/docker-compose.prebuilt.yml
@@ -41,6 +41,24 @@ services:
         extra_hosts:
             - "host.docker.internal:host-gateway"
 
+    navigraph:
+        image: ghcr.io/vatsim-radar/vatsim-radar/next-prebuilt:latest
+        container_name: vatsim-radar-prebuilt-worker
+        ports:
+            - 3000:3000
+        command: /radar/.config/navigraph-prod.sh
+        volumes:
+            - "./src/data:/radar/src/data:rw"
+        depends_on:
+            db:
+                condition: service_healthy
+            redis:
+                condition: service_started
+            frontend:
+                condition: service_healthy
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
+
     vatglasses-worker:
         image: ghcr.io/vatsim-radar/vatsim-radar/next-prebuilt:latest
         container_name: vatsim-radar-prebuilt-vg
