Update github issues

--- a/.github/ISSUE_TEMPLATE/02-enhancement.yaml
+++ b/.github/ISSUE_TEMPLATE/02-enhancement.yaml
@@ -1,14 +1,15 @@
-name: Feedback (Next Branch)
-description: Suggest feedback to Next branch
-labels: [ "enhancement", "next", "pending triage" ]
-assignees: ["daniluk4000"]
+name: Feature Request / Feedback
+description: Do you want us to improve or add something?
+labels: [ "enhancement", "pending triage" ]
+assignees: [ "daniluk4000" ]
+type: "Feature"
 body:
   - type: markdown
     attributes:
       value: |
-        Hello! Thank you for suggesting an improvement for VATSIM Radar Next. Remember, that you have to be QA or Patreon member to suggest features for next branch.
+        Hello! Thank you for suggesting an improvement for VATSIM Radar.
         
-        Before reporting, please also check existing feature requests and enhancements in this repository - you can filter them by "feature request" and "pending triage" labels (also check closed ones).
+        Before reporting, please also check existing feature requests and enhancements in this repository - you can filter them by "feature request" label (also check closed ones).
         
         Also please check our roadmap - your request could already be planned to be implemented or is actually a separate feature.
   - type: input
@@ -17,7 +18,7 @@ body:
       label: Your Vatsim CID
       description: It is your Vatsim login. Required for us to contact you in Discord if you're there.
     validations:
-      required: true
+      required: false
   - type: textarea
     id: what
     attributes:
@@ -31,7 +32,7 @@ body:
       label: Why do you need that?
       description: Describe your request - why do you need that, how would it benefit to people, what are you trying to solve.
     validations:
-      required: true
+      required: false
   - type: textarea
     id: alternatives
     attributes:
@@ -55,6 +56,4 @@ body:
         - label: I have searched for other requests and didn't found any alike
           required: true
         - label: I have also checked roadmap, and this is not planned
-          required: true
-        - label: I am QA or Patreon member and using next.vatsim-radar.com
           required: true
