--- a/.github/ISSUE_TEMPLATE/04-bug-report-next.yaml
+++ b/.github/ISSUE_TEMPLATE/04-bug-report-next.yaml
@@ -1,29 +1,32 @@
-name: Bug report (production)
-description: Report found issue on production
-labels: ["bug", "pending triage"]
+name: Bug report (Next Branch)
+description: Report found issue on Next branch
+labels: [ "bug", "next", "pending triage" ]
 assignees: ["daniluk4000"]
+type: "Bug"
 body:
   - type: markdown
     attributes:
       value: |
-        Hello! Thank you for reporting an issue in VATSIM Radar.
+        Hello! This is a form for reporting an issue on https://next.vatsim-radar.com/ only. 
         
-        Before reporting, please also check existing issues in this repository - you can filter them by "bug" label (also check closed ones).
+        Before reporting, please also check existing issues in this repository - you can filter them by "bug" and "next" labels (also check closed ones).
+        
+        Also check if you can reproduce on production (if yes - open issue there) and reported "next" versions.
         
         Also please check our roadmap - your "issue" could already be planned to be implemented or is actually a separate feature.
   - type: input
     id: id
     attributes:
       label: Your Vatsim CID
-      description: It is your Vatsim login. Required for us to contact you in Discord if you're there.
+      description: It is your Vatsim login. Required for us to contact you in Discord, and also track your activity.
     validations:
       required: true
   - type: input
     id: version
     attributes:
       label: Radar version
-      description: Please include Radar version - you can find it in the footer
-      placeholder: For example, 0.1.1
+      description: Please include Radar Next version - you can find it in the footer
+      placeholder: For example, 0.1.1-alpha.1
     validations:
       required: true
   - type: textarea
@@ -63,4 +66,8 @@ body:
         - label: I have searched for other issues and didn't found any alike
           required: true
         - label: I have also checked roadmap, and this is not planned
+          required: true
+        - label: I am QA or Patreon member and using next.vatsim-radar.com
+          required: true
+        - label: I couldn't reproduce it on production / it's issue in new functionality
           required: true
