--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,9 @@ contact_links:
   - name: Airline issue
     url: https://github.com/VATSIM-Radar/data/issues/new/choose
     about: Some airline is showing incorrect info or not shown at all? Report this in our data project!
+  - name: Documentation
+    url: https://docs.vatsim-radar.com/introduction/faq.html
+    about: Check our docs for known issues and limitations
   - name: Discord
     url: https://vatsim-radar.com/discord
     about: Feel free to join our Discord to discuss stuff, including possible bugs and suggestions!
