--- a/.github/ISSUE_TEMPLATE/01-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yaml
@@ -1,5 +1,5 @@
-name: Bug report (production)
-description: Report found issue on production
+name: Bug report
+description: Report found issue on vatsim-radar.com
 labels: ["bug", "pending triage"]
 assignees: ["daniluk4000"]
 type: "Bug"
