Update navigraph to prod

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ DISCORD_TOKEN=
 #ACCESS_BY_DISCORD_ROLES=1237157417377337455,1237157276327084065
 
 GITHUB_ACCESS_TOKEN=
+NAVIGRAPH_HOST=http://navigraph:3000
 
 INFLUX_URL=
 INFLUX_TOKEN=
