--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -109,7 +109,11 @@ jobs:
           personalAccessToken: ${{ secrets.DIGITALOCEAN_TOKEN }}
           clusterName: main
       - name: Deploy Navigraph
-        run: kubectl apply -f .config/k8s/navigraph.yml
+        run: kubectl apply -f .config/k8s/main/navigraph.yml
+      - name: Apply Navigraph
+        run: kubectl rollout restart deployment navigraph
+      - name: Validate Navigraph
+        run: kubectl rollout status deployment navigraph
       - name: Validate Navigraph
         run: kubectl rollout status deployment navigraph
       - name: Deploy Volume
