--- a/.config/k8s/main/db.yml
+++ b/.config/k8s/main/db.yml
@@ -26,7 +26,7 @@ spec:
         app: db
     spec:
       nodeSelector:
-        doks.digitalocean.com/node-pool: basic-2
+        doks.digitalocean.com/node-pool: main
       containers:
         - name: db
           image: mysql
