--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.2.1-beta.2",
+  "version": "1.2.1-beta.3",
   "private": true,
   "type": "module",
   "scripts": {
@@ -49,6 +49,7 @@
     "adm-zip": "^0.5.16",
     "aws-sdk": "^2.1692.0",
     "chardet": "^2.1.0",
+    "chart.js": "^4.5.0",
     "chokidar": "^4.0.3",
     "croner": "^9.1.0",
     "deep-equal": "^2.2.3",
@@ -77,6 +78,7 @@
     "vite-svg-loader": "^5.1.0",
     "vitepress": "^1.6.3",
     "vue": "^3.5.17",
+    "vue-chartjs": "^5.3.2",
     "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.1",
     "ws": "^8.18.3"
