--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.2.1-final",
+  "version": "1.2.1-1-final",
   "private": true,
   "type": "module",
   "scripts": {
@@ -31,7 +31,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.12.0",
     "@protomaps/basemaps": "^5.5.1",
-    "@sentry/nuxt": "^9.41.0",
+    "@sentry/nuxt": "^9.42.0",
     "@turf/bearing": "^7.2.0",
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/difference": "^7.2.0",
@@ -74,7 +74,7 @@
     "srvx": "^0.8.2",
     "svgo": "^4.0.0",
     "ua-parser-js": "2.0.4",
-    "vite-plugin-pwa": "^1.0.1",
+    "vite-plugin-pwa": "^1.0.2",
     "vite-svg-loader": "^5.1.0",
     "vitepress": "^1.6.3",
     "vue": "^3.5.18",
@@ -98,7 +98,7 @@
     "@types/merge-ranges": "^1.0.2",
     "@types/node": "^24.1.0",
     "@types/ws": "^8.18.1",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "fast-xml-parser": "^5.2.5",
     "postcss": "^8.5.6",
     "postcss-html": "^1.8.0",
