--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.2.1-1-final",
+  "version": "1.2.2-beta.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -31,7 +31,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.13.0",
     "@protomaps/basemaps": "^5.5.1",
-    "@sentry/nuxt": "^9.43.0",
+    "@sentry/nuxt": "^10.0.0",
     "@turf/bearing": "^7.2.0",
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/difference": "^7.2.0",
@@ -55,7 +55,7 @@
     "deep-equal": "^2.2.3",
     "discord.js": "^14.21.0",
     "idb": "^8.0.3",
-    "ioredis": "^5.6.1",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "kafkajs": "^2.2.4",
@@ -107,11 +107,11 @@
     "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-recommended-scss": "^15.0.1",
     "stylelint-config-recommended-vue": "^1.6.1",
-    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard": "^39.0.0",
     "tsx": "4.16.2",
-    "typescript": "5.8.3",
+    "typescript": "5.9.2",
     "vite-plugin-eslint2": "^5.0.4",
-    "vue-tsc": "3.0.1"
+    "vue-tsc": "3.0.5"
   },
   "packageManager": "yarn@4.9.2"
 }
