--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.2.2-beta.1",
+  "version": "1.2.2-final",
   "private": true,
   "type": "module",
   "scripts": {
@@ -46,6 +46,8 @@
     "@turf/nearest-point-on-line": "^7.2.0",
     "@turf/union": "^7.2.0",
     "@vite-pwa/nuxt": "^1.0.4",
+    "@vueuse/core": "^13.6.0",
+    "@vueuse/nuxt": "^13.6.0",
     "adm-zip": "^0.5.16",
     "aws-sdk": "^2.1692.0",
     "chardet": "^2.1.0",
@@ -81,7 +83,6 @@
     "vue-chartjs": "^5.3.2",
     "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.1",
-    "vue3-touch-events": "^5.0.13",
     "ws": "^8.18.3"
   },
   "devDependencies": {
