--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.2.3-beta.2",
+  "version": "1.2.3-beta.4",
   "private": true,
   "type": "module",
   "scripts": {
@@ -56,13 +56,14 @@
     "chokidar": "^4.0.3",
     "croner": "^9.1.0",
     "deep-equal": "^2.2.3",
+    "dexie": "^4.2.0",
     "discord.js": "^14.22.1",
-    "idb": "^8.0.3",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "kafkajs": "^2.2.4",
     "klona": "^2.0.6",
+    "magvar": "^2.0.0",
     "marked": "^16.2.1",
     "merge-ranges": "^1.0.2",
     "metar-taf-parser": "^9.1.2",
