--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@influxdata/influxdb-client": "^1.35.0",
     "@influxdata/influxdb-client-apis": "^1.35.0",
     "@pinia/nuxt": "^0.11.3",
-    "@prisma/client": "^6.19.0",
+    "@prisma/adapter-mariadb": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "@protomaps/basemaps": "^5.7.0",
     "@sentry/nuxt": "^10.26.0",
     "@turf/bearing": "^7.3.0",
@@ -57,7 +58,7 @@
     "croner": "^9.1.0",
     "deep-equal": "^2.2.3",
     "dexie": "^4.2.1",
-    "discord.js": "^14.25.0",
+    "discord.js": "^14.25.1",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
@@ -71,7 +72,7 @@
     "ol": "^10.7.0",
     "ol-mapbox-style": "^13.1.1",
     "pinia": "^3.0.4",
-    "prisma": "^6.19.0",
+    "prisma": "^7.0.0",
     "rou3": "^0.7.10",
     "sharp": "^0.34.5",
     "sqlite3": "^5.1.7",
@@ -106,15 +107,15 @@
     "postcss": "^8.5.6",
     "postcss-html": "^1.8.0",
     "sass-embedded": "^1.93.3",
-    "stylelint": "^16.25.0",
-    "stylelint-config-clean-order": "^7.0.0",
+    "stylelint": "^16.26.0",
+    "stylelint-config-clean-order": "^7.2.2",
     "stylelint-config-recommended-scss": "^16.0.2",
     "stylelint-config-recommended-vue": "^1.6.1",
     "stylelint-config-standard": "^39.0.1",
     "tsx": "4.16.2",
     "typescript": "5.9.3",
     "vite-plugin-eslint2": "^5.0.4",
-    "vue-tsc": "3.1.4"
+    "vue-tsc": "3.1.5"
   },
   "packageManager": "yarn@4.11.0"
 }
