--- a/.github/actions/codecheck/action.yaml
+++ b/.github/actions/codecheck/action.yaml
@@ -12,7 +12,7 @@ runs:
       run: yarn lint
     - name: Prisma
       shell: sh
-      run: npx prisma generate
+      run: DATABASE_URL=mysql://root:localhost@db:3306/radar?schema=public npx prisma generate
     - name: Prepare
       shell: sh
       run: yarn prepare
