--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "7zip-min": "^2.1.0",
     "@influxdata/influxdb-client": "^1.35.0",
     "@influxdata/influxdb-client-apis": "^1.35.0",
+    "@nuxt/image": "2.0.0",
     "@pinia/nuxt": "^0.11.3",
     "@prisma/adapter-mariadb": "^7.1.0",
     "@prisma/client": "^7.1.0",
