Move next from separated node

--- a/.config/k8s/next/app.yml
+++ b/.config/k8s/next/app.yml
@@ -40,7 +40,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: next
+        doks.digitalocean.com/node-pool: main
 ---
 apiVersion: v1
 kind: Service
