--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.2.4-1-final",
+  "version": "1.2.4-2-rc.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -37,6 +37,7 @@
     "@sentry/nuxt": "^10.30.0",
     "@turf/bearing": "^7.3.1",
     "@turf/boolean-point-in-polygon": "^7.3.1",
+    "@turf/centroid": "^7.3.1",
     "@turf/difference": "^7.3.1",
     "@turf/distance": "^7.3.1",
     "@turf/great-circle": "^7.3.1",
