Minor bug fixes

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ VATSIM_CLIENT_ID=819
 VATSIM_CLIENT_SECRET=QqahebIdibK4rNsFyg8AKbx9lbdYpORwDuR0NBDe
 VATSIM_ENDPOINT=https://auth-dev.vatsim.net
 VATSIM_IDENT_TOKEN=
+VATSIM_VOICE_USERNAME=
+VATSIM_VOICE_PASSWORD=
 
 DOMAIN=http://localhost:8080
 DATABASE_URL=mysql://root:localhost@db:3306/radar?schema=public
