--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.2.4-3-rc.1",
+  "version": "1.2.4-3-final",
   "private": true,
   "type": "module",
   "scripts": {
@@ -69,6 +69,7 @@
     "metar-taf-parser": "^9.1.2",
     "nuxt": "^4.2.2",
     "ol": "^10.7.0",
+    "ol-ext": "^4.0.37",
     "ol-mapbox-style": "^13.2.0",
     "pinia": "^3.0.4",
     "prisma": "^7.2.0",
@@ -100,6 +101,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/merge-ranges": "^1.0.2",
     "@types/node": "^25.0.3",
+    "@types/ol-ext": "npm:@siedlerchr/types-ol-ext@latest",
     "@types/ws": "^8.18.1",
     "eslint": "^9.39.2",
     "fast-xml-parser": "^5.3.3",
